<!-- Copyright (c) Microsoft. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.microsoft.projectoxford.face.samples.persongroupmanagement.PersonGroupActivity">

    <RelativeLayout
        android:id="@+id/person_group_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/view_margin">

        <TextView
            android:id="@+id/person_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/person_group_name" />

        <EditText
            android:id="@+id/edit_person_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/person_group_name"
            android:layout_toEndOf="@id/person_group_name"
            android:singleLine="true"
            android:maxLength="30"
            android:hint="@string/type_in_person_group_name_tip" />

    </RelativeLayout>

    <TextView
        android:id="@+id/person_group_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/info"
        android:layout_marginBottom="@dimen/view_margin"
        android:text="@string/person_group_tip" />

    <GridView
        android:id="@+id/gridView_persons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/person_group_name_view"
        android:layout_above="@id/person_group_tip"
        android:layout_marginBottom="@dimen/view_margin"
        android:numColumns="3"
        android:verticalSpacing="@dimen/view_margin"
        android:horizontalSpacing="@dimen/view_margin"
        android:gravity="center" />

    <TextView
        android:id="@id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button_bar"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_person"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:text="@string/add_person"
            android:onClick="addPerson"
            style="@style/ButtonStyle" />

        <Button
            android:id="@id/done_and_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/done_and_save"
            android:onClick="doneAndSave"
            style="@style/ButtonStyle" />

    </LinearLayout>


</RelativeLayout>









    <!--&lt;!&ndash; Copyright (c) Microsoft. All rights reserved. &ndash;&gt;-->

<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:focusable="true"-->
    <!--android:focusableInTouchMode="true"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.microsoft.projectoxford.face.samples.persongroupmanagement.PersonGroupActivity">-->


    <!--<GridView-->
        <!--android:id="@+id/gridView_persons"-->
        <!--android:layout_width="325dp"-->
        <!--android:layout_height="496dp"-->
        <!--android:layout_marginStart="24dp"-->
        <!--android:layout_marginBottom="100dp"-->
        <!--android:gravity="center"-->
        <!--android:horizontalSpacing="@dimen/view_margin"-->
        <!--android:numColumns="3"-->
        <!--android:verticalSpacing="@dimen/view_margin"-->

        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/identify"-->
        <!--app:layout_constraintVertical_bias="1.0" />-->

    <!--<Button-->
        <!--android:id="@+id/identify"-->
        <!--android:layout_width="96dp"-->
        <!--android:layout_height="53dp"-->
        <!--android:layout_marginStart="38dp"-->
        <!--android:layout_marginTop="44dp"-->
        <!--android:text="IDENTIFY"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.862"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/gridView_persons" />-->

<!--</android.support.constraint.ConstraintLayout>-->
